--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -48,7 +48,7 @@
           href="{% url 'home' %}"
         >
           <img
-            src="{% static 'paw-icon.png' %}"
+            src="{% static 'assets/paw-icon.png' %}"
             alt="PetShop Logo"
             class="me-2"
           />
